[gd_scene load_steps=15 format=2]

[ext_resource path="res://art/ground.png" type="Texture" id=1]
[ext_resource path="res://art/cloud_01.png" type="Texture" id=2]
[ext_resource path="res://art/pink-tree_with-fruits.png" type="Texture" id=3]
[ext_resource path="res://art/blue-tree_with-fruits.png" type="Texture" id=4]
[ext_resource path="res://art/cloud_02.png" type="Texture" id=5]
[ext_resource path="res://Scripts/grid.gd" type="Script" id=6]
[ext_resource path="res://Scripts/ice_holder.gd" type="Script" id=7]
[ext_resource path="res://Scripts/lock_holder.gd" type="Script" id=8]
[ext_resource path="res://Scripts/concrete_holder.gd" type="Script" id=9]
[ext_resource path="res://Scripts/slime_holder.gd" type="Script" id=10]
[ext_resource path="res://Scenes/top_ui.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/GameOverPanel.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/sinker.tscn" type="PackedScene" id=13]
[ext_resource path="res://art/ui/down.png" type="Texture" id=14]

[node name="game_window" type="Node2D"]

[node name="backgroundcolor" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.74902, 0.823529, 0.945098, 1 )

[node name="cloud" type="TextureRect" parent="."]
margin_left = 119.0
margin_top = 31.0
margin_right = 587.0
margin_bottom = 292.0
texture = ExtResource( 2 )
expand = true

[node name="cloud2" type="TextureRect" parent="."]
margin_left = -37.0
margin_top = 40.0
margin_right = 412.0
margin_bottom = 321.0
texture = ExtResource( 5 )
expand = true

[node name="top_ui" parent="." instance=ExtResource( 11 )]

[node name="bluetree" type="TextureRect" parent="."]
margin_left = -121.0
margin_top = 206.0
margin_right = 351.0
margin_bottom = 767.0
texture = ExtResource( 4 )
expand = true

[node name="widthpinktree" type="TextureRect" parent="."]
margin_left = 284.0
margin_top = 387.0
margin_right = 680.0
margin_bottom = 844.0
texture = ExtResource( 3 )
expand = true

[node name="background" type="TextureRect" parent="."]
margin_top = 670.0
margin_right = 581.0
margin_bottom = 1039.0
texture = ExtResource( 1 )
expand = true

[node name="down_ui" type="TextureRect" parent="."]
margin_left = 10.0
margin_top = 900.0
margin_right = 566.0
margin_bottom = 1012.0
texture = ExtResource( 14 )
expand = true

[node name="grid" type="Node2D" parent="."]
script = ExtResource( 6 )
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 2
empty_spaces = PoolVector2Array( 0, 0, 7, 0, 0, 9, 7, 9, 3, 4, 4, 4, 3, 5, 4, 5 )
ice_pieces = PoolVector2Array( 3, 0, 4, 0, 3, 9, 4, 9 )
lock_spaces = PoolVector2Array( 3, 2, 4, 2, 3, 7, 4, 7 )
concrete_spaces = PoolVector2Array( 3, 1, 4, 1, 3, 8, 4, 8 )
slime_spaces = PoolVector2Array( 0, 4, 0, 5, 7, 4, 7, 5 )
max_score = 1000
piece_value = 5
current_counter_value = 100
is_moves = true
sinker_piece = ExtResource( 13 )
sinkers_in_scene = true
max_sinkers = 2

[node name="Timer" type="Timer" parent="grid"]

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="lock_holder" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="concrete_holder" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="slime_holder" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refil_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GameOverPanel" parent="." instance=ExtResource( 12 )]

[connection signal="damage_concrete" from="grid" to="concrete_holder" method="_on_grid_damage_concrete"]
[connection signal="damage_ice" from="grid" to="ice_holder" method="_on_grid_damage_ice"]
[connection signal="damage_lock" from="grid" to="lock_holder" method="_on_grid_damage_lock"]
[connection signal="damage_slime" from="grid" to="slime_holder" method="_on_grid_damage_slime"]
[connection signal="game_over" from="grid" to="GameOverPanel" method="_on_grid_game_over"]
[connection signal="make_concrete" from="grid" to="concrete_holder" method="_on_grid_make_concrete"]
[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]
[connection signal="make_ice" from="grid" to="lock_holder" method="_on_grid_make_ice"]
[connection signal="make_lock" from="grid" to="lock_holder" method="_on_grid_make_lock"]
[connection signal="make_slime" from="grid" to="slime_holder" method="_on_grid_make_slime"]
[connection signal="setup_max_score" from="grid" to="top_ui" method="_on_grid_setup_max_score"]
[connection signal="update_counter" from="grid" to="top_ui" method="_on_grid_update_counter"]
[connection signal="update_score" from="grid" to="top_ui" method="_on_grid_update_score"]
[connection signal="timeout" from="grid/Timer" to="grid" method="_on_Timer_timeout"]
[connection signal="remove_lock" from="lock_holder" to="grid" method="_on_lock_holder_remove_lock"]
[connection signal="remove_concrete" from="concrete_holder" to="grid" method="_on_concrete_holder_remove_concrete"]
[connection signal="remove_slime" from="slime_holder" to="grid" method="_on_slime_holder_remove_slime"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refil_timer" to="grid" method="_on_refil_timer_timeout"]
